--- a/RARFSlider/Classes/RARFSliderView/RARFSliderView.xib
+++ b/RARFSlider/Classes/RARFSliderView/RARFSliderView.xib
@@ -28,101 +28,115 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KbT-qZ-jmr">
-                    <rect key="frame" x="16" y="130" width="343" height="501"/>
+                    <rect key="frame" x="16" y="105" width="343" height="501"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="KbT-qZ-jmr" secondAttribute="height" multiplier="343:463" constant="-28.151187904967628" id="0i5-xT-nQ5"/>
-                        <constraint firstAttribute="width" constant="343" id="PKy-5U-QaE"/>
-                        <constraint firstAttribute="height" constant="501" id="qJU-Pw-RfN"/>
+                        <constraint firstAttribute="height" constant="501" id="Mpw-UB-9ft"/>
+                        <constraint firstAttribute="width" constant="343" id="QfX-yG-JGB"/>
                     </constraints>
                 </imageView>
                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="eLB-hK-AUd">
-                    <rect key="frame" x="-2" y="377" width="379" height="31"/>
+                    <rect key="frame" x="-2" y="352" width="379" height="31"/>
                 </slider>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cJ2-8q-jhB">
-                    <rect key="frame" x="0.0" y="250" width="80" height="80"/>
+                    <rect key="frame" x="0.0" y="225" width="80" height="80"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="80" id="Fgz-xn-WrE"/>
                         <constraint firstAttribute="width" constant="80" id="dVd-Up-u1J"/>
-                        <constraint firstAttribute="width" secondItem="cJ2-8q-jhB" secondAttribute="height" multiplier="1:1" id="tJ3-na-nTq"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DqO-xM-0tb">
                     <rect key="frame" x="134" y="130" width="118" height="68"/>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="68" id="1ws-5j-SFn"/>
                         <constraint firstAttribute="width" secondItem="DqO-xM-0tb" secondAttribute="height" multiplier="59:34" id="AMh-lb-t4v"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qiJ-0E-e7U">
                     <rect key="frame" x="134" y="200" width="118" height="68"/>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="qiJ-0E-e7U" secondAttribute="height" multiplier="59:34" id="82K-nT-kon"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cyl-ej-IZV">
-                    <rect key="frame" x="164" y="488" width="47" height="30"/>
+                <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" verticalCompressionResistancePriority="752" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cyl-ej-IZV">
+                    <rect key="frame" x="164" y="463" width="47" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="47" id="9wb-W6-ZRq"/>
                     </constraints>
-                    <state key="normal" title="Trim"/>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <state key="normal" title="Trim">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sso-NX-aj3">
-                    <rect key="frame" x="172.5" y="430" width="30" height="30"/>
-                    <state key="normal" title="Pic"/>
+                <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sso-NX-aj3">
+                    <rect key="frame" x="172.5" y="405" width="30" height="30"/>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <state key="normal" title="Pic">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h4z-Dl-2VV" userLabel="InsideTrim">
-                    <rect key="frame" x="134" y="601" width="118" height="30"/>
+                    <rect key="frame" x="134" y="576" width="118" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="118" id="4JL-hD-Rzb"/>
                     </constraints>
-                    <state key="normal" title="Inside Trim"/>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <state key="normal" title="Inside Trim">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EcJ-fz-td0">
-                    <rect key="frame" x="164" y="544" width="47" height="30"/>
+                <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" verticalCompressionResistancePriority="752" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EcJ-fz-td0">
+                    <rect key="frame" x="164" y="519" width="47" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="47" id="mvY-De-qt3"/>
                     </constraints>
-                    <state key="normal" title="Merge"/>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <state key="normal" title="Merge">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cbu-O8-KGn" customClass="RARFPreView" customModule="RARFSlider" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="105"/>
                 </view>
             </subviews>
+            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="cyl-ej-IZV" firstAttribute="top" secondItem="Sso-NX-aj3" secondAttribute="bottom" constant="28" id="4YW-1U-PQd"/>
+                <constraint firstItem="KbT-qZ-jmr" firstAttribute="centerX" secondItem="cyl-ej-IZV" secondAttribute="centerX" id="5CT-hx-YNo"/>
+                <constraint firstItem="KbT-qZ-jmr" firstAttribute="top" secondItem="cbu-O8-KGn" secondAttribute="bottom" id="5jH-Va-dcQ"/>
                 <constraint firstItem="EcJ-fz-td0" firstAttribute="leading" secondItem="cyl-ej-IZV" secondAttribute="leading" id="6Fi-Gz-ZSx"/>
                 <constraint firstItem="cbu-O8-KGn" firstAttribute="top" secondItem="cdk-ZE-bND" secondAttribute="top" id="7Et-vu-pO5"/>
                 <constraint firstItem="eLB-hK-AUd" firstAttribute="centerX" secondItem="Sso-NX-aj3" secondAttribute="centerX" id="DC5-2F-iDE"/>
                 <constraint firstItem="Sso-NX-aj3" firstAttribute="top" secondItem="eLB-hK-AUd" secondAttribute="bottom" constant="23" id="GkB-xf-GHE"/>
                 <constraint firstItem="qiJ-0E-e7U" firstAttribute="top" secondItem="DqO-xM-0tb" secondAttribute="bottom" constant="2" id="KQR-Ay-DYW"/>
                 <constraint firstItem="h4z-Dl-2VV" firstAttribute="top" secondItem="EcJ-fz-td0" secondAttribute="bottom" constant="27" id="Kyq-yC-LYh"/>
-                <constraint firstItem="eLB-hK-AUd" firstAttribute="top" secondItem="cJ2-8q-jhB" secondAttribute="bottom" constant="47" id="Ojq-rZ-lWp"/>
+                <constraint firstItem="eLB-hK-AUd" firstAttribute="top" secondItem="cJ2-8q-jhB" secondAttribute="bottom" constant="47" id="Mjh-lx-1q2"/>
                 <constraint firstItem="qiJ-0E-e7U" firstAttribute="width" secondItem="DqO-xM-0tb" secondAttribute="width" id="P7G-Gu-cST"/>
                 <constraint firstAttribute="trailing" secondItem="eLB-hK-AUd" secondAttribute="trailing" id="R9v-KF-7sI"/>
                 <constraint firstItem="qiJ-0E-e7U" firstAttribute="height" secondItem="DqO-xM-0tb" secondAttribute="height" id="U35-jE-2PN"/>
-                <constraint firstItem="KbT-qZ-jmr" firstAttribute="top" secondItem="cdk-ZE-bND" secondAttribute="top" constant="130" id="XHL-sF-7qE"/>
+                <constraint firstItem="KbT-qZ-jmr" firstAttribute="top" secondItem="cbu-O8-KGn" secondAttribute="bottom" id="XQ3-Ch-dFO"/>
                 <constraint firstItem="cbu-O8-KGn" firstAttribute="trailing" secondItem="eLB-hK-AUd" secondAttribute="trailing" id="b6x-Ol-Zvj"/>
-                <constraint firstItem="cJ2-8q-jhB" firstAttribute="top" secondItem="cdk-ZE-bND" secondAttribute="top" constant="250" id="dON-f0-PWV"/>
                 <constraint firstItem="h4z-Dl-2VV" firstAttribute="top" secondItem="KbT-qZ-jmr" secondAttribute="bottom" constant="-30" id="emJ-5Q-TLf"/>
                 <constraint firstItem="h4z-Dl-2VV" firstAttribute="leading" secondItem="EcJ-fz-td0" secondAttribute="leading" constant="-30" id="gDh-Jo-CMS"/>
                 <constraint firstAttribute="trailing" secondItem="cJ2-8q-jhB" secondAttribute="trailing" constant="295" id="j3D-Fk-bd6"/>
-                <constraint firstAttribute="bottom" secondItem="cbu-O8-KGn" secondAttribute="bottom" constant="567" id="k0f-Ou-0F4"/>
-                <constraint firstItem="DqO-xM-0tb" firstAttribute="top" secondItem="cdk-ZE-bND" secondAttribute="top" constant="130" id="kNU-Yd-0sv"/>
                 <constraint firstItem="cbu-O8-KGn" firstAttribute="leading" secondItem="cJ2-8q-jhB" secondAttribute="leading" id="mos-GM-9Vp"/>
                 <constraint firstItem="eLB-hK-AUd" firstAttribute="centerX" secondItem="cyl-ej-IZV" secondAttribute="centerX" id="nLL-9b-YFL"/>
+                <constraint firstItem="cJ2-8q-jhB" firstAttribute="top" secondItem="cbu-O8-KGn" secondAttribute="bottom" constant="120" id="pVn-Oq-HNu"/>
+                <constraint firstAttribute="bottom" secondItem="KbT-qZ-jmr" secondAttribute="bottom" constant="61" id="qnv-j5-hek"/>
+                <constraint firstItem="DqO-xM-0tb" firstAttribute="top" secondItem="cbu-O8-KGn" secondAttribute="bottom" constant="25" id="qqM-Ni-Oag"/>
                 <constraint firstItem="DqO-xM-0tb" firstAttribute="leading" secondItem="qiJ-0E-e7U" secondAttribute="leading" id="rqy-1h-18r"/>
                 <constraint firstItem="eLB-hK-AUd" firstAttribute="leading" secondItem="cJ2-8q-jhB" secondAttribute="leading" id="rri-Xm-Gyh"/>
                 <constraint firstItem="DqO-xM-0tb" firstAttribute="leading" secondItem="cdk-ZE-bND" secondAttribute="leading" constant="134" id="uUp-hd-ffe"/>
                 <constraint firstItem="EcJ-fz-td0" firstAttribute="top" secondItem="cyl-ej-IZV" secondAttribute="bottom" constant="26" id="wi0-bP-rbq"/>
                 <constraint firstItem="cJ2-8q-jhB" firstAttribute="leading" secondItem="cdk-ZE-bND" secondAttribute="leading" id="xb8-fB-g2J"/>
-                <constraint firstItem="KbT-qZ-jmr" firstAttribute="centerX" secondItem="EcJ-fz-td0" secondAttribute="centerX" id="y02-F6-moh"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="8.8000000000000007" y="47.226386806596707"/>
